# library

./: CMakeLists.txt  buildall.py
cmake/Modules/: FindCXX11.cmake
core/: CMakeLists.txt
core/src/: Author.cpp  Book.cpp  Collection.cpp
core/test/: CMakeLists.txt  main.cpp  test_author.cpp  test_book.cpp  test_collection.cpp
